--- a/src/components/Pagination/styles.module.css
+++ b/src/components/Pagination/styles.module.css
@@ -10,10 +10,24 @@
 .arrow {
   border: none;
   background-color: white;
+  cursor: pointer;
 }
+
 .pageNumber:disabled,
 .arrow:disabled {
   cursor: default;
+}
+
+.pagination.dark .pageNumber,
+.pagination.dark .arrow {
+  background-color: #23272f;
+  color: #f6f7f9;
+}
+
+.pagination.light .pageNumber,
+.pagination.light .arrow {
+  background-color: white;
+  color: black;
 }
 
 .pageNumber {
