--- a/src/components/Search/styles.module.css
+++ b/src/components/Search/styles.module.css
@@ -1,9 +1,18 @@
 .search {
   display: flex;
   width: 100%;
-  background-color: #fff;
+  background-color: white;
   gap: 12px;
 }
+
+.light {
+  background-color: white;
+}
+
+.dark {
+  background-color: #23272f;
+}
+
 .input {
   width: 100%;
   padding: 10px;
