--- a/src/components/Slider/styles.module.css
+++ b/src/components/Slider/styles.module.css
@@ -9,6 +9,14 @@
   border: none;
   background-color: white;
   cursor: pointer;
-  font-weight: 700;
-  font-size: 16px;
+}
+
+.slider.dark .arrow {
+  background-color: #23272f;
+  color: #f6f7f9;
+}
+
+.slider.light .arrow {
+  background-color: white;
+  color: black;
 }
